--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,14 +12,14 @@
     "@typescript-eslint"
   ],
   "rules": {
-    "@typescript-eslint/strict-boolean-expressions": [
-      2,
-      {
-        "allowString": false,
-        "allowNumber": false
-      }
-    ],
+    // "@typescript-eslint/strict-boolean-expressions": [
+    //   2,
+    //   {
+    //     "allowString": false,
+    //     "allowNumber": false
+    //   }
+    // ],
     "indent": ["error", 2]
   },
-  "ignorePatterns": ["src/**/*.test.ts", "craco.config.js"]
+  "ignorePatterns": ["src/**/*.test.ts", "*.js"]
 }
