--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,28 @@
 {
-  "root": true,
-  "extends": [
-    "eslint:recommended",
-    "plugin:@typescript-eslint/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": ["./tsconfig.json"]
-  },
-  "plugins": [
-    "@typescript-eslint"
-  ],
-  "rules": {
-    // "@typescript-eslint/strict-boolean-expressions": [
-    //   2,
-    //   {
-    //     "allowString": false,
-    //     "allowNumber": false
-    //   }
-    // ],
-    "indent": ["error", 2]
-  },
-  "ignorePatterns": ["src/**/*.test.ts", "*.js"]
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:@typescript-eslint/recommended"
+    ],
+    "overrides": [
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint"
+    ],
+    "rules": {
+      "react/display-name": "off",
+      "react/jsx-key": "off",
+      "indent": ["error", 2]
+    },
+    "ignorePatterns": ["src/**/*.test.ts", "*.js"]
 }
