--- a/package.json
+++ b/package.json
@@ -70,8 +70,12 @@
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@svgr/rollup": "^6.2.1",
     "@types/ace": "^0.0.48",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "cross-env": "^7.0.3",
     "env-cmd": "^10.1.0",
+    "eslint": "^7.11.0",
+    "eslint-plugin-react": "^7.31.11",
     "gh-pages": "^4.0.0",
     "microbundle-crl": "^0.13.11",
     "npm-run-all": "^4.1.5",
