--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=10"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "NODE_ENV=development runtime-env-cra --config-name=./public/runtime-env.js && craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject",
@@ -60,6 +60,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^8.2.0",
     "recharts": "^2.1.10",
+    "runtime-env-cra": "^0.2.4",
     "styled-components": "^5.3.5",
     "use-file-picker": "^1.4.2",
     "web-vitals": "^2.1.4",
