:whale: Update `Dockerfile.dev`

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,6 +7,18 @@ RUN npm run build
 
 FROM nginx:1.22.0-alpine
 ENV NODE_ENV production
+
+RUN rm -rf /etc/nginx/conf.d
+COPY conf /etc/nginx
+
 COPY --from=builder /app/build /usr/share/nginx/html
+
+RUN apk add --update nodejs
+RUN apk add --update npm
+RUN npm install -g runtime-env-cra@0.2.4
+
+WORKDIR /usr/share/nginx/html
+
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+
+CMD ["/bin/sh", "-c", "runtime-env-cra && nginx -g \"daemon off;\""]
