:whale: Build based on `kubeshark/nginx-runtime-env-cra` image

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,20 +5,13 @@ RUN npm ci --omit=dev
 COPY . .
 RUN npm run build
 
-FROM nginx:1.22.0-alpine
+FROM kubeshark/nginx-runtime-env-cra:amd64
 ENV NODE_ENV production
 
-RUN rm -rf /etc/nginx/conf.d
 COPY conf /etc/nginx
-
 COPY --from=builder /app/build /usr/share/nginx/html
 
-RUN apk add --update nodejs
-RUN apk add --update npm
-RUN npm install -g runtime-env-cra@0.2.4
-
 WORKDIR /usr/share/nginx/html
-
 COPY .env .
 
 EXPOSE 80
