adding https support for hub requests

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_DEFAULT_FILTER=timestamp >= now()
 REACT_APP_HUB_HOST=
+REACT_APP_HUB_POROTO=
+REACT_APP_HUB_WS_PROTO=
 REACT_APP_HUB_PORT=8898
